--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" >
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>智能钥匙1</title>
+  <title>智能钥匙</title>
 </head>
 
 <body>
